--- a/crates/xlineapi/Cargo.toml
+++ b/crates/xlineapi/Cargo.toml
@@ -15,6 +15,7 @@ async-trait = "0.1.81"
 curp = { path = "../curp" }
 curp-external-api = { path = "../curp-external-api" }
 itertools = "0.13"
+once_cell = "1.17.0"
 prost = "0.13"
 serde = { version = "1.0.204", features = ["derive"] }
 thiserror = "1.0.61"
