--- a/crates/simulation/Cargo.toml
+++ b/crates/simulation/Cargo.toml
@@ -18,26 +18,29 @@ curp-test-utils = { path = "../curp-test-utils" }
 engine = { path = "../engine" }
 futures = "0.3.29"
 itertools = "0.13"
+j4rs = "0.20.0"
 madsim = "0.2.27"
 parking_lot = "0.12.3"
 prost = "0.13"
 tempfile = "3"
 tokio = { version = "0.2.25", package = "madsim-tokio", features = [
-    "rt",
-    "rt-multi-thread",
-    "fs",
-    "sync",
-    "macros",
-    "time",
-    "signal",
+  "rt",
+  "rt-multi-thread",
+  "fs",
+  "sync",
+  "macros",
+  "time",
+  "signal",
 ] }
 tonic = { version = "0.5.0", package = "madsim-tonic" }
 tracing = { version = "0.1.34", features = ["std", "log", "attributes"] }
+tracing-subscriber = "0.3.1"
 utils = { path = "../utils", version = "0.1.0", features = ["parking_lot"] }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 xline = { path = "../xline" }
 xline-client = { path = "../xline-client" }
 xlineapi = { path = "../xlineapi" }
+jepsen-rs = { path = "../jepsen-rs" }
 
 [build-dependencies]
 tonic-build = { version = "0.5.0", package = "madsim-tonic-build" }
